#17 corrected wrong positioning in mobile view

--- a/public/stylesheets/htwplus.css
+++ b/public/stylesheets/htwplus.css
@@ -1004,7 +1004,6 @@ table .hp-avatar {
 /*============================== Options Menu ==============================*/
 
 .hp-optionsMenu {
-    position: relative;
     overflow: visible;
     padding: 0!important;
 }
@@ -1013,16 +1012,16 @@ table .hp-avatar {
     background-color: #5a5858;
     color: white;
     opacity: 0.93;
-    margin-top: 2px;
+    margin: 0;
     padding: 8px 13px;
     float: none;
-    right: 0;
+    right: 53px;
     left: auto;
     min-width: initial;
 }
 
 .hp-optionsMenu .dropdown {
-    position: inherit;          /* dropdown-menu must be positioned absolute to the content */
+    position: inherit;
 }
 
 .hp-optionsMenu .open>.dropdown-menu {
